--- a/.github/workflows/update-jobs.yml
+++ b/.github/workflows/update-jobs.yml
@@ -2,8 +2,8 @@ name: Update Job Listings
 
 on:
   schedule:
-    - cron: '0 6 * * 1'  # Every Monday at 6 AM UTC
-  workflow_dispatch: {}    # Manual trigger from GitHub UI
+    - cron: '0 6 * * 1'
+  workflow_dispatch: {}
 
 permissions:
   contents: write
@@ -14,6 +14,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: true
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -31,5 +34,4 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add mapvoid/firms.json data/jsearch-discoveries.json
-          git diff --staged --quiet || git commit -m "Update job listings [automated]"
-          git push
+          git diff --staged --quiet && echo "No changes to commit" || (git commit -m "Update job listings [automated]" && git push)
