--- a/.github/workflows/update-jobs.yml
+++ b/.github/workflows/update-jobs.yml
@@ -33,5 +33,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add mapvoid/firms.json data/jsearch-discoveries.json
+          git add mapvoid/firms.json
+          git add data/jsearch-discoveries.json || true
           git diff --staged --quiet && echo "No changes to commit" || (git commit -m "Update job listings [automated]" && git push)
